cmake_minimum_required(VERSION 3.6)
project(C)

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_C_STANDARD 99)
#set(SOURCE_FILES c.c str.c struct.c structarray.c typedef.c)
#add_executable(C ${SOURCE_FILES} structarray.c typedef.c)
add_executable(A main.cpp )
add_executable(C str.c )
add_executable(D struct/struct.c)
add_executable(E struct/structarray.c)
add_executable(F typedef.c)
add_executable(G c6_io/io.c)
add_executable(H cpp/c1_/first.cpp)
add_executable(I cpp/c1_/const.cpp)
add_executable(J cpp/c1_/reference.cpp)
add_executable(K  cpp/c1_/object.cpp )
add_executable(AA cpp/c1_/overload/c.c)
add_executable(AAA cpp/c1_/overload/fun.cpp cpp/c1_/overload/Student.h cpp/c1_/overload/Student.cpp)
add_executable(AAA22  cpp/c1_/overload/bool.cpp)
add_executable(AAA3  cpp/c2/oop.cpp)
add_executable(AAAAAA  cpp/c2/con_copy.cpp)
add_executable(AAAAAAA cpp/c2/pointer_const.cpp)